# casile

./: .commitlintrc.yml  .editorconfig  .eslintrc.yml  .gitignore  .luacheckrc  .luarc.json  .styluaignore  CHANGELOG.md  Cargo.toml  Dockerfile  Justfile  LICENSE.txt  Makefile.am  README.md  a5kesme.sil  action.yml  arka.pov  binding.xml  block_styles.lua  book.pov  bootstrap.sh  build.rs  cabook.lua  casile.lua  casile.m4  casile.yml  charnotchar.lua  checkmake.ini  cilt.xml  citation_audit.vim  configure.ac  cover.xml  covers.lua  crop.lua  deny.toml  editorconfig  endnotes.lua  epubclean.lua  filter-withverses.lua  fragmanlar.xml  (+85 more)
.cargo/: config.toml
.github/workflows/: build.yml  commitlint.yml  deploy.yml  luacheck.yml  release.yml  rust.yml  rust_bloat.yml  rust_lint.yml  rust_test.yml  shellcheck.yml  versioning.yml
assets/en-US/: casile.ftl  cli.ftl
assets/tr-TR/: casile.ftl  cli.ftl
build-aux/: ax_font.m4  ax_lua.m4  ax_luarocks_rock.m4  ax_python.m4  ax_rust_boilerplate.m4  build.rs  compile-pandoc-sile.sh  docker-entrypoint.sh  list-dist-files.sh  list-distfiles.sh.in  que_dist_checksums.m4  que_docker_boilerplate.m4  que_git_version.m4  que_rust_boilerplate.m4  rust_boilerplate.am.in  rust_boilerplate.mk.in  shell_completion_dirs.mk
classes/: block-styles.lua  cabinding.lua  cabook-commands.lua  cabook-inline-styles.lua  cabook.lua  cageometry.lua  commands.lua
fonts/: Printer Ornaments One License.txt
hooks/: build
layouts/: a4.lua  a4ciltli.lua  a5trim.lua  a6.lua  a6trim.lua  a7.lua  a7kart.lua  a7trimkart.lua  app.lua  banner.lua  businesscard.lua  cep.lua  ekran.lua  epub.lua  halfletter.lua  octavo.lua  royaloctavo.lua  square.lua  wide.lua
lib/: functions.zsh.in  make-shell.zsh.in  plain_reader.lua  readmeta.lua
lua-libraries/: lunamark.lua
pandoc-filters/: chapterid.lua  epubclean.lua  filter-withverses.lua  guess-headings.lua  mark-epigraphs.lua  mark-parts.lua  sentence_lines.lua  strip_for_mdbook.lua  svg2pdf.py  titlecase_titles.lua  unitalicize-blockquotes.lua  withoutfootnotes.lua  withoutheadinglinks.lua  withoutlinks.lua  withverses.lua
resources/en-US/: cli.ftl
resources/tr-TR/: cli.ftl
rules/: casile.mk  casile.mk.in  ebooks.mk  en.mk  functions.mk  mdbook.mk  renderings.mk  rules.mk  tr.mk  translation.mk  utilities.mk  zola.mk
scripts/: branch2criticmark.zsh  branch2criticmark.zsh.in  casile-entry.zsh.in  cover_title.py.in  diff2marked.zsh.in  extract_references.js  extract_references.js.in  figure_dash.pl.in  flatten_chapters.zsh.in  functions.zsh.in  import.zsh.in  isbn_format.py.in  italic_reorder.pl.in  lazy_quotes.pl.in  link_verses.js.in  list_related_files.zsh.in  loadchapters.zsh.in  msword_escapes.pl.in  normalize_files.zsh.in  normalize_references.js.in  ordinal_spaces.pl  ordinal_spaces.pl.in  renumber_footnotes.pl  renumber_footnotes.pl.in  reorder_punctuation.pl  reorder_punctuation.pl.in  series_sort.lua.in  smart_quotes.pl.in  split_chapters.zsh.in  split_mdbook_src.zsh.in  stats.zsh  stats.zsh.in  toc2breaks.lua  toc2breaks.lua.in  unicode_symbols.pl.in  worklog.zsh  worklog.zsh.in
src/: cli.rs  config.rs  i18n.rs  lib.rs  main.rs  make.rs  setup.rs  shell.rs  tui.rs  ui.rs  ui_ascii.rs  ui_indicatif.rs
src/make/: mod.rs
src/run/: mod.rs
src/script/: mod.rs
src/setup/: mod.rs
src/shell/: mod.rs
src/status/: mod.rs
tests/: cli.rs
