[package]
name = "casile"
version = "0.11.2"
authors = [ "Caleb Maclennan <caleb@alerque.com>" ]
edition = "2018"
description = "The command line interface to the CaSILE toolkit, a book publishing workflow employing SILE and other wizardry"
homepage = "https://github.com/sile-typesetter/casile"
repository = "https://github.com/sile-typesetter/casile"
license = "AGPL-3.0"
build = "build-aux/build.rs"

[dependencies]
colored = "2.0"
fluent = "0.12"
fluent-fallback = "0.0"
fluent-langneg = "0.13"
itertools = "0.11"
lazy_static = "1.4"
num_cpus = "1.16"
rayon = "1.8"
rust-embed = "8.0"
subprocess = "0.2"
unic-langid = "0.9"

  [dependencies.config]
  version = "0.13"
  default-features = false
  features = [ "yaml" ]

  [dependencies.clap]
  version = "4.4"
  features = [ "derive", "wrap_help" ]

  [build-dependencies.clap_mangen]
  version = "0.2"

  [dependencies.git2]
  version = "0.18"
  default-features = false

  [dependencies.git-warp-time]
  version = "0.5"
  default-features = false

  [dependencies.Inflector]
  version = "0.11"
  default-features = false

  [dependencies.regex]
  version = "1.9"
  default-features = false
  features = [ "std" ]

[build-dependencies.clap]
version = "4.4"
features = [ "derive" ]

[build-dependencies.clap_complete]
version = "4.4"

[build-dependencies.vergen]
version = "8.2"
default-features = false
features = [ "build", "cargo", "git", "gitoxide" ]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
lto = true
