[package]
name = "casile"
version = "0.12.1"
authors = [ "Caleb Maclennan <caleb@alerque.com>" ]
edition = "2018"
rust-version = "1.70.0"
description = "The command line interface to the CaSILE toolkit, a book publishing workflow employing SILE and other wizardry"
homepage = "https://github.com/sile-typesetter/casile"
repository = "https://github.com/sile-typesetter/casile"
license = "AGPL-3.0"
build = "build-aux/build.rs"

[dependencies]
colored = "2.1"
fluent = "0.12"
fluent-fallback = "0.0"
fluent-langneg = "0.13"
itertools = "0.12"
lazy_static = "1.4"
num_cpus = "1.16"
rayon = "1.8"
rust-embed = "8.2"
subprocess = "0.2"
unic-langid = "0.9"

  [dependencies.config]
  version = "0.14"
  default-features = false
  features = [ "yaml" ]

  [dependencies.clap]
  version = "4.4"
  features = [ "derive", "wrap_help" ]

  [dependencies.git2]
  version = "0.18"
  default-features = false

  [dependencies.git-warp-time]
  version = "0.7"
  default-features = false

  [dependencies.Inflector]
  version = "0.11"
  default-features = false

  [dependencies.regex]
  version = "1.10"
  default-features = false
  features = [ "std" ]

[build-dependencies.clap_mangen]
version = "0.2"

[build-dependencies.clap]
version = "4.4"
features = [ "derive" ]

[build-dependencies.clap_complete]
version = "4.4"

[build-dependencies.vergen]
version = "8.3"
default-features = false
features = [ "build", "cargo", "git", "gitoxide" ]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
lto = true
