[package]
name = "casile"
version = "0.14.6"
authors = ["Caleb Maclennan <caleb@alerque.com>"]
edition = "2021"
rust-version = "1.75.0"
description = "The command line interface to the CaSILE toolkit, a book publishing workflow employing SILE and other wizardry"
homepage = "https://github.com/sile-typesetter/casile"
repository = "https://github.com/sile-typesetter/casile"
license = "AGPL-3.0"
build = "build-aux/build.rs"

[profile.release]
lto = true

[dependencies]
console = "0.15"
fluent = "0.16"
fluent-fallback = "0.7"
fluent-langneg = "0.13"
futures = "0.3"
itertools = "0.14"
lazy_static = "1.5"
num_cpus = "1.16"
rayon = "1.10"
rust-embed = "8.5"
rustc-hash = "1.1"
subprocess = "0.2"
unic-langid = "0.9"
unic-langid-impl = "0.9"

[dependencies.config]
version = "0.14"
default-features = false
features = ["yaml"]

[dependencies.clap]
version = "4.5"
features = ["derive", "wrap_help"]

[dependencies.git2]
version = "0.19"
default-features = false

[dependencies.git-warp-time]
version = "0.8"
default-features = false

[dependencies.indicatif]
version = "0.17"
features = ["improved_unicode", "rayon"]

[dependencies.Inflector]
version = "0.11"
default-features = false

[dependencies.regex]
version = "1.10"
default-features = false
features = ["std"]

[build-dependencies.clap_mangen]
version = "0.2"

[build-dependencies.clap]
version = "4.5"
features = ["derive"]

[build-dependencies.clap_complete]
version = "4.5"

[build-dependencies.vergen-gix]
version = "1.0"
default-features = false
features = ["build", "cargo", "rustc"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[package.metadata.typos.default]
locale = "en-us"
extend-ignore-identifiers-re = ["Heros", "[Cc]alibre"]
extend-words = {}

[package.metadata.typos.files]
ignore-hidden = false
extend-exclude = [
  "/.git",
  "CHANGELOG.md",
  "build-aux/ax*",
  "lua-libraries/*",
  "names.*.txt",
  "rules/en.mk",
  "rules/tr.mk",
  "upgrade*.sed",
]
